--- a/index.html
+++ b/index.html
@@ -4,8 +4,27 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fitness Home</title>
-  <style>
-    body {
+  <style>.navbar {
+    background-color: #4CAF50;
+    padding: 15px;
+    text-align: center;
+}
+.navbar a {
+    color: white;
+    margin: 0 15px;
+    font-size: 18px;
+    text-decoration: none;
+}
+.navbar a:hover {
+    text-decoration: underline;
+}
+    body {<nav class="navbar">
+    <a href="index.html">Home</a>
+    <a href="plans.html">Health Plans</a>
+    <a href="community.html">Community Chat</a>
+    <a href="tracker.html">Progress Tracker</a>
+    <a href="about.html">About</a>
+</nav>
       font-family: Arial, sans-serif;
       background: #fafafa;
       text-align: center;
