--- a/index.html
+++ b/index.html
@@ -1,62 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fitness Home</title>
-  <style>.navbar {
-    background-color: #4CAF50;
-    padding: 15px;
-    text-align: center;
-}
-.navbar a {
-    color: white;
-    margin: 0 15px;
-    font-size: 18px;
-    text-decoration: none;
-}
-.navbar a:hover {
-    text-decoration: underline;
-}
-    body {<nav class="navbar">
-    <a href="index.html">Home</a>
-    <a href="plans.html">Health Plans</a>
-    <a href="community.html">Community Chat</a>
-    <a href="tracker.html">Progress Tracker</a>
-    <a href="about.html">About</a>
-</nav>
-      font-family: Arial, sans-serif;
-      background: #fafafa;
-      text-align: center;
-      padding: 40px;
-    }
-    h1 {
-      font-size: 32px;
-      margin-bottom: 20px;
-    }
-    a.button {
-      display: inline-block;
-      padding: 15px 25px;
-      margin: 10px;
-      background: #28a745;
-      color: white;
-      text-decoration: none;
-      border-radius: 8px;
-      font-size: 18px;
-    }
-    a.button:hover {
-      opacity: 0.8;
-    }
-  </style>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>FitJourney</title>
+
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            background-color: #f4f7f9;
+        }
+
+        /* LOGO */
+        .logo {
+            text-align: center;
+            padding: 20px 0;
+        }
+        .logo h1 {
+            font-size: 32px;
+            margin: 0;
+            color: #2e7d32;
+            font-weight: bold;
+        }
+        .logo p {
+            margin: 5px 0 0;
+            font-size: 16px;
+            color: #666;
+        }
+
+        /* NAV BAR */
+        .navbar {
+            background-color: #2e7d32;
+            padding: 15px;
+            display: flex;
+            justify-content: center;
+            gap: 25px;
+            position: sticky;
+            top: 0;
+            z-index: 10;
+        }
+        .navbar a {
+            color: white;
+            font-size: 18px;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        .navbar a:hover {
+            text-decoration: underline;
+        }
+
+        /* BUTTONS */
+        .home-buttons {
+            max-width: 600px;
+            margin: 30px auto;
+            text-align: center;
+            padding: 10px;
+        }
+        .btn {
+            display: block;
+            background-color: #43a047;
+            color: white;
+            padding: 16px;
+            margin: 12px 0;
+            border-radius: 8px;
+            font-size: 20px;
+            text-decoration: none;
+            transition: 0.2s ease-in-out;
+        }
+        .btn:hover {
+            background-color: #2e7d32;
+            transform: scale(1.03);
+        }
+
+        /* SECTION TEXT */
+        .welcome {
+            text-align: center;
+            padding: 20px;
+        }
+        .welcome h2 {
+            color: #2e7d32;
+            font-size: 28px;
+        }
+        .welcome p {
+            font-size: 18px;
+            color: #444;
+        }
+    </style>
 </head>
+
 <body>
 
-<h1>Welcome to Your Fitness Website</h1>
+    <!-- LOGO -->
+    <div class="logo">
+        <h1>FitJourney</h1>
+        <p>Your path to a healthier, stronger you.</p>
+    </div>
 
-<p>Your journey starts here. Explore workouts, nutrition, and connect with the community.</p>
+    <!-- NAVIGATION BAR -->
+    <div class="navbar">
+        <a href="index.html">Home</a>
+        <a href="plans.html">Plans</a>
+        <a href="community.html">Community</a>
+        <a href="tracker.html">Tracker</a>
+        <a href="progress.html">Progress</a>
+        <a href="articles.html">Articles</a>
+    </div>
 
-<a href="about.html" class="button">About</a>
-<a href="community.html" class="button">Community Support Board</a>
+    <!-- WELCOME SECTION -->
+    <div class="welcome">
+        <h2>Welcome to FitJourney</h2>
+        <p>Choose your goal and start your personalized health plan today!</p>
+    </div>
+
+    <!-- MAIN BUTTONS -->
+    <div class="home-buttons">
+        <a class="btn" href="plans.html">Start Your Health Plan</a>
+        <a class="btn" href="tracker.html">Track Your Calories</a>
+        <a class="btn" href="community.html">Join the Community</a>
+        <a class="btn" href="progress.html">View Progress Dashboard</a>
+        <a class="btn" href="articles.html">Read Health Articles</a>
+    </div>
 
 </body>
 </html>
