--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         }
         .btn {
             display: block;
-            background-color: #43a047;
+            background-color: #FF0000;
             color: white;
             padding: 16px;
             margin: 12px 0;
